# course

./: CMakeLists.txt  CMakePresets.json
.devcontainer/: apt-packages.in  devcontainer.json
.github/workflows/: build.yml
homework_04/data/: incorrect.txt  straight-light.txt
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/src/: main.cpp  telemetry.cpp
