cmake_minimum_required(VERSION 3.20)

project(ugv_telemetry CXX)

# Код домашньої роботи збирається з тим самим стандартом, що й лекційні приклади.
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Один executable для задачі з UGV odometry.
add_executable(telemetry_check src/main.cpp)

add_library(telemetry src/telemetry.cpp)
target_include_directories(telemetry PUBLIC include)

target_link_libraries(telemetry_check PRIVATE telemetry)

# Базові compiler warnings допомагають побачити підозрілі місця до runtime.
target_compile_options(telemetry_check PRIVATE -Wall -Wextra -pedantic)
